--- a/paper/references.bib
+++ b/paper/references.bib
@@ -114,3 +114,21 @@
   note         = {Available at https://jupyter.org},
   url          = {https://jupyter.org},
 }
+
+@report{clinton2021task,
+  title={Task force on 2020 pre-election polling: An evaluation of the 2020 general election polls},
+  author={Clinton, Joshua and Agiesta, Jennifer and Brenan, Megan and Burge, Chase and Connelly, Michael and Edwards-Levy, Ariel and Fraga, Bernard and Guskin, Emily and Hillygus, D. Sunshine and Jackson, Clair and Jones, Jeffrey and Keeter, Scott and Khanna, Kabir and Lapinski, John and Saad, Lydia and Shaw, Daron and Smith, Andrew and Wilson, David and Wlezien, Christopher},
+  year={2021},
+  institution={American Association for Public Opinion Research}
+}
+
+@article{kennedy2018evaluation,
+  title={An evaluation of the 2016 election polls in the United States: AAPOR task force report},
+  author={Kennedy, Courtney and Blumenthal, Mark and Clement, Scott and Clinton, Joshua and Durand, Claire and Franklin, Charles and McGeeney, Kyle and Miringoff, Lee and Olson, Kristen and Rivers, Douglas and Saad, Lydia and Witt, George E. and Wlezien, Christopher},
+  journal={Public Opinion Quarterly},
+  volume={82},
+  pages={1--33},
+  year={2018}
+}
+
+
