Discussion section addtions

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -76,7 +76,7 @@ cumulative_votes = np.cumsum(votes)
 cumulative_votes_reversed = np.cumsum(votes[::-1])
 x = np.arange(len(states))
 
-plt.figure(figsize=(18, 14))
+plt.figure(figsize=(20, 14))
 plt.step(x, cumulative_votes, where='post', color='navy', linewidth=2, marker='o')
 x_reversed = np.flip(x)
 plt.step(x_reversed, cumulative_votes_reversed, where='post', color='red', linewidth=2, marker='o')
@@ -358,11 +358,11 @@ In this paper, we create a logistic regression model to predict the outcome of t
 
 ## What Do We Learn About the World?
 
+The result of the model tells us that overall the polls in october are favouringh Harris to win the election. From th perpctiv of the republican party if they wish to "turn the tide" this model highlights which of the swing states are more possible to flip than others. North Carolina is the premier state predicted to go blue with the highest liklyhood of Trump winning. It would be recommended to allocate resources here to try and win a state from Harris. As far as retaining currently favoured states, Michigan is a weak position for Trump according to the model, nearing a coin flip. As this state holds 15 lectoral college votes, 4th most of the swing states, it is a key state to win. Assuming the model's correct prediction that Michigan is currently held by Trump, expect the democrats to attempt to tip the scales in their favor here.
+
 One of the most significant insights from this analysis is the discrepancy between polling data and the betting markets. While the majority of reputable polls suggest that Kamala Harris is favored on both a national level and in most swing states, betting markets like Polymarket imply a 67% chance of Trump winning the election as of October 23, 2024 [@polymarket]. This stark disconnect raises questions about the accuracy of traditional polling methods and whether betting markets, which are financial tools driven by market forces, may offer a more precise reflection of public sentiment.
 
 At first glance, one might expect that if polling data were more accurate than betting markets, arbitrage opportunities would emerge, allowing savvy participants to profit from discrepancies. However, this does not seem to be happening, which suggests that the markets may be pricing in information that the polls do not capture—perhaps reflecting shifts in voter sentiment, hidden preferences, or systematic biases in polling.
-
-## What Else Do We Learn About the World?
 
 Another important consideration is the possible biases in both polling and betting markets. Poll respondents may not be a representative sample of the electorate; for example, Democrats could be more likely to respond to polls, skewing the results in favor of Harris. Meanwhile, individuals who participate in betting markets might form a subset of the population that is disproportionately supportive of Trump, which could explain why the implied odds heavily favor him. Furthermore, the rapid expansion and increased liquidity of betting markets in the last few years may have improved their efficiency, making them more reflective of real-world probabilities. However, historical data still suggest that polls have been accurate 78% of the time in predicting elections [@FiveThirtyEight], indicating that the reliability of betting markets remains questionable, especially in light of their poor performance during the 2016 election, when Trump’s odds were listed at +475 (17%) just before his victory [https://www.oddsshark.com/entertainment/us-presidential-odds-2016-futures].
 
@@ -372,7 +372,7 @@ While our model provides a structured framework for predicting the election, it 
 
 Moreover, our focus on swing states limits the model’s applicability to the national picture. While swing states are crucial to the election outcome, non-swing states could offer additional insights into broader voter trends, and including them in future analyses could enhance the model’s robustness. Training the model on a more comprehensive dataset that includes these states and other predictive variables, such as demographic factors or economic indicators, could lead to a more accurate forecast.
 
-Candidate Trump’s low likelihood of winning shown by our results may under-represent his support, this claim is supported by the disparity with the betting markets. This could be a result of a common problem with polling data, response rate bias. In the previous two elections, where Donald Trump was also the republican candidate, his polling was far below the eventual results on election day. Post-mortems of both elections indicated evidence of those supporting Trump not participating in polls and thus under-presenting Republican support [@clinton2021task, @kennedy2018evaluation]. Should this trend continue, and be present in the polls used in this analysis, it may be expected that Trump could surprise the model and win some of these swing states. Another reason Trump could outperform the model is another bias often seen in surveys, one of social desirability. Trump is a unique candidate as, if elected, he would become the first president to be elected with federal crime conviction. This along with other negative publicity the former host of tv’s apprentice has garnered since the start of his political campaign could bias voters from publicly or privately showing their support. Even with the quality polls used in this analysis, where steps are taken to ensure representative results (see appendix B), we could be observing a skew in the results.
+Candidate Trump’s low likelihood of winning shown by our results may under-represent his support, this claim is supported by the disparity with the betting markets. This could be a result of a common problem with polling data, response rate bias. In the previous two elections, where Donald Trump was also the republican candidate, his polling was far below the eventual results on election day. Post-mortems of both elections indicated evidence of those supporting Trump not participating in polls and thus under-presenting Republican support (@clinton2021task , @kennedy2018evaluation). Should this trend continue, and be present in the polls used in this analysis, it may be expected that Trump could surprise the model and win some of these swing states. Another reason Trump could outperform the model is another bias often seen in surveys, one of social desirability. Trump is a unique candidate as, if elected, he would become the first president to be elected with federal crime conviction. This along with other negative publicity the former host of tv’s apprentice has garnered since the start of his political campaign could bias voters from publicly or privately showing their support. Even with the quality polls used in this analysis, where steps are taken to ensure representative results (see appendix B), we could be observing a skew in the results.
 Another aspect that 
 
 ## How Should We Proceed in the Future?
