--- a/paper/references.bib
+++ b/paper/references.bib
@@ -131,4 +131,29 @@
   year={2018}
 }
 
+@article{brick2013nonresponse,
+  title={Unit Nonresponse and Weighting Adjustments: A Critical Review},
+  author={Brick, J. Michael},
+  journal={Journal of Official Statistics},
+  volume={29},
+  number={3},
+  pages={329--353},
+  year={2013}
+}
+
+@article{nyt_swing,
+  title={Tracking the Swing States for Harris and Trump},
+  author={Boyce, Lily and Gamio, Lazaro and Murray, Eli and Parlapiano, Alicia},
+  journal={The New York Times},
+  year={2024},
+  month={November 1},
+  url={https://www.nytimes.com/interactive/2024/us/elections/presidential-election-swing-states.html}
+}
+
+@misc{polymarket2024election,
+  title = {Presidential Election Winner 2024},
+  howpublished = {\url{https://polymarket.com/event/presidential-election-winner-2024}},
+  note = {Accessed: 2024-10-23}
+}
+
 
