discussion addition and paper editing

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -156,4 +156,37 @@
   note = {Accessed: 2024-10-23}
 }
 
+@book{Kish1965Survey,
+  author = {Kish, Leslie},
+  title = {Survey Sampling},
+  year = {1965},
+  publisher = {John Wiley \& Sons}
+}
+
+@article{bailey2023new,
+  title={A New Paradigm for Polling},
+  author={Bailey, Michael A.},
+  journal={Harvard Data Science Review},
+  volume={5},
+  number={3},
+  year={2023},
+  doi={10.1162/99608f92.9898eede},
+  url={https://hdsr.mitpress.mit.edu/pub/ejk5yhgv}
+}
+
+@article{socialdesire,
+    author = {Holbrook, Allyson L. and Krosnick, Jon A.},
+    title = "{Social desirability bias in voter turnout reports: Tests using the item count technique}",
+    journal = {Public Opinion Quarterly},
+    volume = {74},
+    number = {1},
+    pages = {37-67},
+    year = {2009},
+    month = {11},
+    abstract = "{Surveys usually yield rates of voting in elections that are higher than official turnout figures, a phenomenon often attributed to intentional misrepresentation by respondents who did not vote and would be embarrassed to admit that. The experiments reported here tested the social desirability response bias hypothesis directly by implementing a technique that allowed respondents to report secretly whether they voted: the “item count technique.” The item count technique significantly reduced turnout reports in a national telephone survey relative to direct self-reports, suggesting that social desirability response bias influenced direct self-reports in that survey. But in eight national surveys of American adults conducted via the Internet, the item count technique did not significantly reduce turnout reports. This mode difference is consistent with other evidence that the Internet survey mode may be less susceptible to social desirability response bias because of self-administration.}",
+    issn = {0033-362X},
+    doi = {10.1093/poq/nfp065},
+    url = {https://doi.org/10.1093/poq/nfp065},
+    eprint = {https://academic.oup.com/poq/article-pdf/74/1/37/5212417/nfp065.pdf},
+}
 
