--- a/paper/references.bib
+++ b/paper/references.bib
@@ -190,3 +190,11 @@
     eprint = {https://academic.oup.com/poq/article-pdf/74/1/37/5212417/nfp065.pdf},
 }
 
+@misc{nyt2024cross_tabs,
+  title={Cross-Tabs: September 2024 Inquirer/Times/Siena Poll of the Pennsylvania Likely Electorate},
+  author={{The New York Times}},
+  year={2024},
+  month={September 19},
+  url={https://www.nytimes.com/interactive/2024/09/19/us/politics/times-siena-inquirer-poll-pennsylvania-likely-electorate.html}
+}
+
